Fix z-index on aimeos main navbar.

--- a/src/backend/ext/ai-admin-jqadm/admin/jqadm/themes/default/nav.css
+++ b/src/backend/ext/ai-admin-jqadm/admin/jqadm/themes/default/nav.css
@@ -17,7 +17,7 @@
 	border-radius: .25rem;
 	padding: 0.5rem 1rem;
 	margin: 1rem 0;
-	z-index: 1040;
+	z-index: 1;
 }
 
 .aimeos .main-navbar .navbar-brand {
